--- a/Lab 1 and 2/index3.html
+++ b/Lab 1 and 2/index3.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event listener</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1 id="mytitle">Hi !!!.</h1>
-        <p  id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque.</p>
+      <h1 id="mytitle">Hi !!!.</h1>
+      <p id="para">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque.
+      </p>
 
-        <button id="btntoogle" >Toogle</button>
+      <button id="btntoogle">Toogle</button>
     </div>
 
     <script>
-        const btn = document.getElementById("btntoogle");
-        const ttl = document.getElementById("mytitle");
-        const para = document.getElementById("para");
+      const btn = document.getElementById("btntoogle");
+      const ttl = document.getElementById("mytitle");
+      const para = document.getElementById("para");
 
-        btn.addEventListener('click', tooglettl);
-        btn.addEventListener('click', tooglepara);
-      
-        function tooglettl() {
-        if(ttl.style.display != 'none')
-            ttl.style.display = 'none';
-        else
-        ttl.style.display = 'block';
-    }
-        function tooglepara() {
-        if(para.style.display != 'none')
-            para.style.display = 'none';
-        else
-            para.style.display = 'block';
-    }
+      btn.addEventListener("click", tooglettl);
+      btn.addEventListener("click", tooglepara);
+
+      function tooglettl() {
+        if (ttl.style.display != "none") ttl.style.display = "none";
+        else ttl.style.display = "block";
+      }
+      function tooglepara() {
+        if (para.style.display != "none") para.style.display = "none";
+        else para.style.display = "block";
+      }
     </script>
-</body>
+  </body>
 </html>
