--- a/Lab 2/index10.html
+++ b/Lab 2/index10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>H.W</title>
+    <title>Vehicle Renewal</title>
     <style>
       * {
         margin: 0px;
