--- a/Lab 2/index8.html
+++ b/Lab 2/index8.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Interest Calculator</title>
+    <title>Simple Interest</title>
     <style>
       form {
         max-width: 500px;
